--- a/src/app/module/funding/components/create-modal/create-modal.component.html
+++ b/src/app/module/funding/components/create-modal/create-modal.component.html
@@ -1,23 +1,3 @@
-<div class="d-flex flex-column">
-    <div class="modal-header d-flex justify-content-between align-items-center">
-        <span class="h4 text-capitalize">{{
-            'FUNDING.CREATE_TITLE' | translate
-        }}</span>
-    </div>
-
-    <div class="modal-body">
-        <funding-create-form></funding-create-form>
-    </div>
-
-    <div class="modal-footer d-flex justify-content-center gap-2">
-        <button class="btn btn-primary text-capitalize">
-            {{ 'COMMON.SAVE' | translate }}
-        </button>
-        <button
-            class="btn btn-secondary text-capitalize"
-            (click)="closeModal()"
-        >
-            {{ 'COMMON.CANCEL' | translate }}
-        </button>
-    </div>
-</div>
+<modal-wrapper [headerTitle]="'FUNDING.CREATE_TITLE' | translate">
+    <funding-create-form></funding-create-form>
+</modal-wrapper>
