--- a/src/app/module/member/components/form-search/form-search.component.html
+++ b/src/app/module/member/components/form-search/form-search.component.html
@@ -1,4 +1,4 @@
-<form class="d-flex flex-column row-gap-3">
+<search-wrapper [formGroup]="formGroup" class="d-flex flex-column row-gap-3">
     <div class="row row-gap-3">
         <div class="col-md-4">
             <label class="fw-semibold text-capitalize">{{
@@ -55,4 +55,4 @@
             <ng-select></ng-select>
         </div>
     </div>
-</form>
+</search-wrapper>
