--- a/src/app/module/match-result/components/form-search/form-search.component.html
+++ b/src/app/module/match-result/components/form-search/form-search.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formGroup" class="d-flex flex-column row-gap-3">
+<search-wrapper [formGroup]="formGroup">
     <div class="row row-gap-3">
         <div class="col-md-3">
             <label class="fw-semibold">{{ 'COMMON.FC' | translate }}</label>
@@ -29,15 +29,4 @@
             </div>
         </div>
     </div>
-
-    <div class="row">
-        <div class="d-flex justify-content-start justify-content-md-center">
-            <button class="btn btn-primary">
-                <fa-icon [icon]="['fas', 'search']" class="me-2"></fa-icon>
-                <span class="text-capitalize">{{
-                    'COMMON.SEARCH' | translate
-                }}</span>
-            </button>
-        </div>
-    </div>
-</form>
+</search-wrapper>
