fix bug: UI go-back button

--- a/src/app/pages/football-club/create-football-club/create-football-club.page.html
+++ b/src/app/pages/football-club/create-football-club/create-football-club.page.html
@@ -19,6 +19,6 @@
                 {{ 'FOOTBALL_CLUB.CREATE.BTN_CREATE' | translate }}
             </span>
         </button>
-        <button-back [class]="['btn', 'btn-md', 'btn-danger']"></button-back>
+        <button-back [size]="'md'"></button-back>
     </div>
 </div>
