detail fc page: show fc information and grid member of fc

--- a/src/app/module/football-club/components/create-form/create-form.component.html
+++ b/src/app/module/football-club/components/create-form/create-form.component.html
@@ -14,7 +14,7 @@
             ></fms-input>
         </div>
         <div class="col-md-6">
-            <label class="fw-semibold text-capitalize">{{
+            <label class="fw-semibold text-capitalize required">{{
                 'MEMBER.AVATAR' | translate
             }}</label>
             <input
