add funds information to detail fc

--- a/src/app/pages/football-club/detail-football-club/detail-football-club.page.html
+++ b/src/app/pages/football-club/detail-football-club/detail-football-club.page.html
@@ -14,4 +14,8 @@
             ></member-grid>
         </div>
     </fms-box>
+
+    <fms-box [label]="'FUNDING.STATISTIC_FUNDING' | translate">
+        <funding-information></funding-information>
+    </fms-box>
 </div>
