done: detail fc page

--- a/src/app/module/common/components/fms-box/fms-box.component.html
+++ b/src/app/module/common/components/fms-box/fms-box.component.html
@@ -1,5 +1,5 @@
-<div class="p-3 bg-light rounded">
-    <div class="p-3 bg-white rounded shadow">
+<div class="p-3 bg-light rounded h-100">
+    <div class="p-3 bg-white rounded shadow h-100">
         <h4
             *ngIf="label"
             class="w-100 border-bottom border-2 pb-2 text-capitalize"
