--- a/src/app/module/football-club/components/fc-information/fc-information.component.html
+++ b/src/app/module/football-club/components/fc-information/fc-information.component.html
@@ -6,7 +6,7 @@
             class="w-100 h-100"
         />
     </div>
-    <div class="col-md-7 d-flex flex-column row-gap-10px">
+    <div class="col-md-7 d-flex flex-column row-gap-10px p-3">
         <div class="row">
             <div class="col-sm-6 d-flex gap-10px">
                 <span class="fw-bold">Mã FC:</span>
