--- a/src/app/module/funding/components/funding-information/funding-information.component.html
+++ b/src/app/module/funding/components/funding-information/funding-information.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="col-md-6 d-flex flex-column row-gap-20px">
+<div class="row gap-20px">
+    <div class="col-md-5 d-flex flex-column row-gap-20px">
         <div class="d-flex gap-10px align-items-center">
             <span class="text-capitalize fw-bold"
                 >{{ 'FUNDING.TOTAL_PAID' | translate }}:</span
@@ -23,12 +23,12 @@
 
         <div class="d-flex gap-10px align-items-center">
             <span class="text-capitalize fw-bold"
-                >{{ 'FUNDING.AVAILABEL' | translate }}:</span
+                >{{ 'FUNDING.AVAILABLE' | translate }}:</span
             >
             <span>{{ 50000000 | money: 'VND' }}</span>
         </div>
     </div>
-    <div class="col-md-6 d-flex flex-column row-gap-20px">
+    <div class="col-md-5 d-flex flex-column row-gap-20px">
         <div class="d-flex gap-10px align-items-center">
             <span class="text-capitalize fw-bold"
                 >{{ 'FUNDING.TOTAL_PAID' | translate }}:</span
@@ -52,7 +52,7 @@
 
         <div class="d-flex gap-10px align-items-center">
             <span class="text-capitalize fw-bold"
-                >{{ 'FUNDING.AVAILABEL' | translate }}:</span
+                >{{ 'FUNDING.AVAILABLE' | translate }}:</span
             >
             <span>{{ 50000000 | money: 'VND' }}</span>
         </div>
