--- a/src/app/module/resource/components/list-media/list-media.component.html
+++ b/src/app/module/resource/components/list-media/list-media.component.html
@@ -1,7 +1,10 @@
 <div class="d-flex flex-column row-gap-2">
     <div class="d-flex justify-content-between align-items-center">
-        <h4 class="text-capitalize">{{ 'RESOURCE.MEDIA' | translate }}</h4>
+        <h4 *ngIf="showTitle" class="text-capitalize">
+            {{ 'RESOURCE.MEDIA' | translate }}
+        </h4>
         <button
+            *ngIf="!readonly"
             class="btn btn-sm btn-success"
             (click)="onOpenUploadModal()"
             [disabled]="media.files.length >= maxNumberFile"
@@ -26,6 +29,7 @@
                 alt="preview image"
             />
             <button
+                *ngIf="!readonly"
                 class="d-none border-0 position-absolute remove-image rounded-circle d-flex justify-content-center align-items-center fw-bolder bg-dark text-white"
                 (click)="onRemoveImage(i)"
             >
