--- a/src/app/pages/football-club/football-club.page.html
+++ b/src/app/pages/football-club/football-club.page.html
@@ -1,13 +1,9 @@
 <div class="d-flex flex-column gap-4 h-100">
-    <div class="p-3 bg-light rounded">
-        <div class="p-3 bg-white rounded shadow">
-            <fc-form-search (search)="ngOnSearch($event)"></fc-form-search>
-        </div>
-    </div>
-    <div class="p-3 bg-light rounded h-100">
-        <div
-            class="d-flex flex-column row-gap-4 h-100 bg-white p-3 rounded shadow"
-        >
+    <fms-box>
+        <fc-form-search (search)="ngOnSearch($event)"></fc-form-search>
+    </fms-box>
+    <fms-box>
+        <div class="d-flex flex-column row-gap-4 h-100">
             <div class="d-flex justify-content-between align-items-center">
                 <span class="font-italic fw-semibold text-capitalize"
                     >{{ 'COMMON.TOTAL_RECORD' | translate:{numberOfRecord:
@@ -51,5 +47,5 @@
                 (paginate)="paginate($event)"
             ></pagination>
         </div>
-    </div>
+    </fms-box>
 </div>
